crates/spite-parser/tests/snapshots/for_loops__for_syntax_snapshot.snap
---
source: crates/spite-parser/tests/for_loops.rs
expression: script
---
Script {
    statements: [
        Statement {
            kind: For {
                initializer: Some(
                    Expression(
                        Expr {
                            depth: 2,
                            kind: Assign(
                                "i",
                                Expr {
                                    depth: 1,
                                    kind: Literal(
                                        Number(
                                            0.0,
                                        ),
                                    ),
                                    span: Span {
                                        start: 9,
                                        end: 10,
                                    },
                                },
                            ),
                            span: Span {
                                start: 5,
                                end: 10,
                            },
                        },
                    ),
                ),
                test: Some(
                    Expr {
                        depth: 2,
                        kind: Binary(
                            Less,
                            Expr {
                                depth: 1,
                                kind: Identifier(
                                    "i",
                                ),
                                span: Span {
                                    start: 12,
                                    end: 13,
                                },
                            },
                            Expr {
                                depth: 1,
                                kind: Literal(
                                    Number(
                                        2.0,
                                    ),
                                ),
                                span: Span {
                                    start: 16,
                                    end: 17,
                                },
                            },
                        ),
                        span: Span {
                            start: 12,
                            end: 17,
                        },
                    },
                ),
                update: Some(
                    Expr {
                        depth: 3,
                        kind: Assign(
                            "i",
                            Expr {
                                depth: 2,
                                kind: Binary(
                                    Add,
                                    Expr {
                                        depth: 1,
                                        kind: Identifier(
                                            "i",
                                        ),
                                        span: Span {
                                            start: 23,
                                            end: 24,
                                        },
                                    },
                                    Expr {
                                        depth: 1,
                                        kind: Literal(
                                            Number(
                                                1.0,
                                            ),
                                        ),
                                        span: Span {
                                            start: 27,
                                            end: 28,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 23,
                                    end: 28,
                                },
                            },
                        ),
                        span: Span {
                            start: 19,
                            end: 28,
                        },
                    },
                ),
                body: Statement {
                    kind: Continue(
                        None,
                    ),
                    span: Span {
                        start: 30,
                        end: 39,
                    },
                },
            },
            span: Span {
                start: 0,
                end: 39,
            },
        },
        Statement {
            kind: For {
                initializer: None,
                test: None,
                update: None,
                body: Statement {
                    kind: Break(
                        None,
                    ),
                    span: Span {
                        start: 49,
                        end: 55,
                    },
                },
            },
            span: Span {
                start: 40,
                end: 55,
            },
        },
    ],
    strict: false,
}
